# FlashDB

./: .travis.yml  README.md  README_zh.md
.github/workflows/: main.yml
demos/: README.md
demos/esp32_spi_flash/: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
demos/esp32_spi_flash/main/: CMakeLists.txt  main.c
demos/esp8266_spi_flash/: ESP8266_flashDB_log.rtf  README.md  sdkconfig  ~$P8266_flashDB_log.rtf
demos/linux/: Makefile  README.md
demos/stm32f103ve/: .cproject  .project  README.md
demos/stm32f103ve_stdlib/: DeleteTempDataForPackage.bat  README.md
demos/stm32f405rg/: .cproject  .project  README.md
demos/stm32f405rg_spi_flash/: .cproject  .gitignore  .project  README.md
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  api.md  configuration.md  demo-details.md  demo-esp8266-spi-flash.md  demo-stm32f103ve.md  demo-stm32f405rg-spi-flash.md  demo-stm32f405rg.md  index.html  porting.md  quick-started.md  sample-kvdb-basic.md  sample-kvdb-traversal.md  sample-kvdb-type-blob.md  sample-kvdb-type-string.md  sample-tsdb-basic.md
docs/zh-cn/: README.md  _coverpage.md  _sidebar.md  api.md  configuration.md  demo-details.md  demo-esp8266-spi-flash.md  demo-linux.md  demo-stm32f103ve.md  (+9 more)
inc/: fdb_cfg.h  fdb_cfg_template.h  fdb_def.h  fdb_low_lvl.h  flashdb.h
samples/: kvdb_basic_sample.c  kvdb_benchmark_sample.c  kvdb_type_blob_sample.c  kvdb_type_string_sample.c  tsdb_sample.c
src/: fdb.c  fdb_file.c  fdb_kvdb.c  fdb_tsdb.c  fdb_utils.c
tests/: fdb_kvdb_tc.c  fdb_tsdb_tc.c
zephyr/: module.yml
(+260 files in other folders)
